# poc-juma-etl

./: .gitignore  LICENSE  README.md  config.py  main.py  materialize_gold.py  pyproject.toml  utils.py
